fix aspect and overflow in the result some animation tweaks

--- a/src/components/Progress/Progress.module.css
+++ b/src/components/Progress/Progress.module.css
@@ -1,35 +1,32 @@
 .gifitProgress {
-  align-items: center;
-  justify-content: center;
-}
-
-.details {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 0.5em;
-  text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
 .save {
 }
 
 .elements {
-  position: relative;
-  width: 100%;
-  height: 5px;
-  transition:
-    width 350ms,
-    height 350ms 250ms;
-}
-
-.progress {
-  -webkit-appearance: none;
-  display: block;
-  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr;
+  grid-template-areas: 'main';
+  max-height: 120px;
   height: 100%;
+
+  > * {
+    min-width: 0;
+    min-height: 0;
+  }
 }
 
 .chunkGrid {
+  grid-area: main;
   display: grid;
   list-style-type: none;
   margin: 0;
@@ -45,10 +42,9 @@
 }
 
 .result {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
+  grid-area: main;
+  z-index: 2;
 }
 
 .actions {
